correcting responsive of homepage and about page

--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
   <div class="about-header-text">
     <div class="about-h1-container">
-      <h1>About</h1>
+      <h1 class="header-h1">What we do best</h1>
     </div>
   
     <div class="about-header-p-container">
