added animation on about page,form alert

--- a/contact.html
+++ b/contact.html
@@ -84,7 +84,7 @@
         </form>
       </div>
     </div>
-  </section>
+  </section> 
 
   <footer>
     <div class="footer-button-container">
@@ -155,6 +155,8 @@
       // if screen width is above 650px display nav button container //
   
       // 
+      $(".hamburger-navbar") 
+        $(".right-nav-button").hide();
 
       $(".hamburger-navbar")
         .on("click", function() {
