--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
       // if screen width is above 650px display nav button container //
   
       //
+      $(".hamburger-navbar") 
+        $(".right-nav-button").hide();
+
       $(".hamburger-navbar")
         .on("click", function() {
           
