--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 
 
       <div class="form-container">
-        <form action="action_page.php">
+        <form>
           <label for="fname">Name</label>
           <input type="text" id="fname" name="firstname" placeholder="Your name.." required>
   
@@ -80,7 +80,7 @@
           <label for="subject">Message</label>
           <textarea id="subject" name="subject" placeholder="Write something.."></textarea>
   
-          <input type="submit" value="Submit">
+          <input type="submit" value="Submit" id="submitbtn">
         </form>
       </div>
     </div>
@@ -167,6 +167,11 @@
       });
 
       // slide toggle for mobile navbar //
+
+      $("#submitbtn")
+        .on("click",function() {
+          alert("Thanks for reaching out!")
+        })
 
   </script>
 
