attempting to fix issue with navbar not showing

--- a/about.html
+++ b/about.html
@@ -325,7 +325,8 @@
         
         })
       });
-
+      $(".hamburger-navbar") 
+        $(".right-nav-button").hide();
       // slide toggle for mobile navbar //
 
 
